make jquery local

--- a/rpg.html
+++ b/rpg.html
@@ -3,8 +3,8 @@
     <head>
         <title>RPG Game</title>
         <link rel='stylesheet' type='text/css' href='rpg.css'/>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+        <script src="/libs/jquery/1.10.1/jquery.min.js"></script>
+        <script src="/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
         <script type='text/javascript' src='gf.js'></script>
         <script type='text/javascript' src='rpg.js'></script>
     </head>
